--- a/ClubManagementSystem/Entities/Resources/GroupAge/GroupAge.ar.resx
+++ b/ClubManagementSystem/Entities/Resources/GroupAge/GroupAge.ar.resx
@@ -117,8 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Oldest_Age" xml:space="preserve">
+  <data name="LargestYear" xml:space="preserve">
     <value>أكبر سنة</value>
+  </data>
+  <data name="NameOfCategory" xml:space="preserve">
+    <value>إسم الصنف</value>
   </data>
   <data name="PluralName" xml:space="preserve">
     <value>الفئات العمرية</value>
@@ -126,10 +129,7 @@
   <data name="SingularName" xml:space="preserve">
     <value>الفئة العمرية</value>
   </data>
-  <data name="Type_Name" xml:space="preserve">
-    <value>إسم الصنف</value>
-  </data>
-  <data name="Youngest_Age" xml:space="preserve">
+  <data name="SmallestYear" xml:space="preserve">
     <value>أصغر سنة</value>
   </data>
 </root>
