--- a/ClubManagementSystem/Entities/Resources/GroupAge/GroupAge.resx
+++ b/ClubManagementSystem/Entities/Resources/GroupAge/GroupAge.resx
@@ -117,19 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Oldes_tAge" xml:space="preserve">
-    <value>أكبر سنة</value>
+  <data name="LargestYear" xml:space="preserve">
+    <value>Largest year</value>
   </data>
-  <data name="PluraleName" xml:space="preserve">
-    <value>الفئات العمرية</value>
+  <data name="NameOfCategory" xml:space="preserve">
+    <value>Name of category</value>
+  </data>
+  <data name="PluralName" xml:space="preserve">
+    <value>Age Groups</value>
   </data>
   <data name="SingularName" xml:space="preserve">
-    <value>الفئة العمرية</value>
+    <value>Age Group</value>
   </data>
-  <data name="Type_Name" xml:space="preserve">
-    <value>إسم الصنف</value>
-  </data>
-  <data name="Youngest_Age" xml:space="preserve">
-    <value>أصغر سنة</value>
+  <data name="SmallestYear" xml:space="preserve">
+    <value>Smallest year</value>
   </data>
 </root>
